argocd/infra/gitea/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Gitea
    gethomepage.dev/icon: gitea
    gethomepage.dev/description: "Gitea is a painless, self-hosted, all-in-one software\
      \ development service."
    gethomepage.dev/pod-selector: app.kubernetes.io/name=gitea
  labels:
    app.kubernetes.io/instance: gitea-app
  name: gitea-httproute
  namespace: gitea
spec:
  parentRefs:
    - name: cilium-private-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - gitea.yanello.net
  rules:
    - backendRefs:
        - name: gitea-http
          group: ""
          kind: Service
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
